<resources>
    <string name="app_name">Inventory Pilot</string>
    <string name="hint_add_email">Ingresa tu correo</string>
    <string name="hint_add_password">Ingresa tu contraseña</string>
    <string name="text_button_login">Ingresar</string>
    <string name="text_error_invalid_email">Ingresa un email valido</string>
    <string name="text_error_size_password">La contraseña debe tener al menos 8 caracteres.</string>
    <string name="text_error_lower_case_password">La contraseña tiene que tener al menos 1 caracter en minuscula.</string>
    <string name="text_error_upper_case_password">La contraseña tiene que tener al menos 1 caracter en mayuscula.</string>
    <string name="text_error_digit_password">La contraseña tiene que tener al menos 1 número.</string>
    <string name="title_sales_history">Historial</string>
    <string name="title_sales">Ventas</string>
    <string name="title_products">Productos</string>

    <!-- PRODUCTS   -->
    <string name="title_action_bar_products">Listado de productos</string>
    <string name="title_first_option_spinner">Selecciona una categoría</string>
    <string name="hint_search_product">Buscar producto</string>

    <!-- SALES   -->
    <string name="title_action_bar_sales">Ventas recientes</string>
    <string name="text_details_sale">%1$s artículos - GTQ %2$s</string>
    <string name="text_price_product">Precio: GTQ %1$s</string>
    <string name="text_quantity_product">Cantidad: %1$s</string>
    <string name="text_add_item_from_sale_success">Producto agregado exitosamente.</string>
    <string name="text_status_pending">PENDIENTE</string>
    <string name="text_status_completed">COMPLETADA</string>
    <string name="text_title_without_stock">Aviso</string>
    <string name="text_message_without_stock">No hay stock suficiente</string>
    <string name="text_accept_button">Aceptar</string>
    <string name="text_title_see_profits">Ganancias</string>

    <!--CART  -->
    <string name="title_action_bar_cart">Realizar Venta</string>
    <string name="text_button_details">Detalles</string>
    <string name="text_pay_for_item">GTQ %1$s</string>
    <string name="text_add_product">Agregar</string>
    <string name="product_image_description">product_image</string>
    <string name="text_total_amount_sale">Total: GTQ %1$s</string>
    <string name="text_delete_item_from_sale_success">Producto eliminado exitosamente.</string>
    <string name="text_sale_successfully">Venta realizada exitosamente</string>
    <string name="text_title_finish_sale">Finalizar Venta</string>
    <string name="text_title_cancel_sale">Cancelar Venta</string>
    <string name="text_message_finish_sale">¿Desea finalizar la venta?</string>
    <string name="text_message_cancel_sale">¿Desea cancelar la venta?</string>
    <string name="text_error_get_cart">Error al obtener el carrito.</string>

    <!-- ADD PRODUCTS   -->
    <string name="title_action_bar_add_product">Agregar producto</string>
    <string name="text_add_product_successfully">Producto agregado exitosamente.</string>
    <string name="text_error_stock_invalid">El stock ingresado no es un número válido.</string>
    <string name="text_error_price_invalid">El precio ingresado no es un número válido.</string>
    <string name="text_error_price_cost_invalid">El precio costo ingresado no es un número válido.</string>
    <string name="text_error_without_name">Colocale nombre a tu producto.</string>
    <string name="text_error_without_description">Colocale una descripción a tu producto.</string>
    <string name="text_error_without_stock">Coloca la cantidad ingresada a tu producto.</string>
    <string name="text_error_without_price">Colocale precio a tu producto.</string>
    <string name="text_error_without_category">Selecciona una categoría para tu producto.</string>
    <string name="hint_text_add_name_product">Ingresa el nombre del producto</string>
    <string name="hint_text_add_description_product">Ingresa la descripción del producto</string>
    <string name="hint_text_add_price_product">Ingresa el precio del producto</string>
    <string name="hint_text_add_price_cost_product">Ingresa el precio costo del producto</string>
    <string name="hint_text_add_quantity_product">Ingresa la cantidad del producto</string>
    <string name="text_title_add_product">Agregar producto</string>
    <string name="text_title_modified_product">Modificar producto</string>
    <string name="text_message_add_product">¿Seguro que toda la informacioón es correcta?</string>

    <!-- ADD DISPATCHERS   -->
    <string name="text_add_dispatchers">Agregar usuario</string>
    <string name="title_action_bar_add_user">Agregar usuario</string>
    <string name="text_error_without_first_name">Debes agregar el primer nombres.</string>
    <string name="text_error_without_last_name">Debes agregar apellido.</string>
    <string name="text_error_without_role">Debes seleccionar un rol para el usuario.</string>
    <string name="text_error_without_branch">Debes seleccionar una sucursal para el usuario.</string>
    <string name="text_error_without_cellphone">Debes agregar un número de teléfono.</string>
    <string name="text_error_without_email">Debes agregar un correo eléctronico.</string>
    <string name="text_save">Guardar</string>
    <string name="hint_text_add_first_name_user">Ingresa los nombres del usuario</string>
    <string name="hint_text_add_last_name_user">Ingresa los apellidos del usuario</string>
    <string name="hint_text_add_email_user">Ingresa el correo electronico del usuario</string>
    <string name="hint_text_add_cellphone_user">Ingresa número de telefono del usuario</string>
    <string name="text_add_user_successfully">Usuario agregado exitosamente.</string>
    <string name="text_owner_role">Dueño</string>
    <string name="text_dispatcher_role">Despachador</string>
    <string name="text_all_roles">Selecciona un rol</string>
    <string name="text_title_add_filter">Aplicar filtro</string>
    <string name="text_title_add_user">Agregar Usuario</string>
    <string name="text_message_add_user">¿Desea agregar el usuario?</string>
    <string name="text_error_get_branches">No se pudieron obtener las sucursales</string>
    <string name="title_first_option_branch_spinner">Selecciona una sucursal</string>

    <!-- UPDATE PRODUCTS   -->
    <string name="text_modified_product_successfully">Producto modificado exitosamente.</string>
    <string name="text_error_get_product">Error al obtener el producto</string>

    <!-- USERS   -->
    <string name="text_two_values">%1$s %2$s</string>
    <string name="title_action_bar_users">Listado de usuarios</string>
    <string name="text_error_get_users">Hubo un problema al obtener los usuarios.</string>
    <string name="text_modified_user_successfully">Usuario modificado exitosamente.</string>
    <string name="text_message_user">¿Está seguro de %1$s a este usuario?</string>

    <!-- LOGOUT   -->
    <string name="text_title_logout">Cerrar sesión</string>
    <string name="text_message_logout">¿Estás seguro de cerrar sesión?</string>
    <string name="text_logout">Cerrar sesión</string>
    <string name="text_failure_logout">No se pudo cerrar sesión.</string>
    <string name="text_success_logout">Sesión cerrada con exito.</string>

    <!-- ADD CATEGORIES PRODUCTS   -->
    <string name="text_title_add_categories">Agregar categoría para productos</string>
    <string name="hint_text_add_name_category">Ingresa el nombre de la categoría</string>
    <string name="text_add_category_successfully">Categoría agregada exitosamente.</string>
    <string name="text_name_empty_error">El campo no puede estar vacío.</string>
    <string name="text_button_disabled">Deshabilitar</string>
    <string name="text_button_enabled">Habilitar</string>
    <string name="text_title_add_category">Agregar categoría</string>
    <string name="text_warning_add_category">¿Desea agregar esta categoría?</string>

    <!-- SALE DETAIL   -->
    <string name="text_title_sale_detail">Detalles de la venta</string>
    <string name="text_title_sale">Venta</string>
    <string name="text_error_get_sale_by_id">Ocurrió un error al obtener la venta</string>

    <string name="text_yes">Si</string>
    <string name="text_no">No</string>
    <string name="text_cancel_action">Cancelar</string>
    <string name="text_title_select_date">Seleccionar mes y \naño</string>
    <string name="text_date_format">%04d-%02d</string>

    <string-array name="date_options">
        <item>Selecciona una opción</item>
        <item>Diario</item>
        <item>Mensual</item>
    </string-array>

    <string-array name="months">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>

    <string name="text_title_profits">Ganancias</string>
</resources>