<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_add_users"
        android:icon="@drawable/ic_add_user_30"
        android:showAsAction="always"
        android:title="@string/text_add_dispatchers" />

    <item
        android:id="@+id/action_add_categories"
        android:icon="@drawable/ic_add_category_30"
        android:showAsAction="always"
        android:title="@string/text_title_add_categories" />

    <item
        android:id="@+id/action_profits"
        android:icon="@drawable/ic_profits_30"
        android:showAsAction="always"
        android:title="@string/text_title_see_profits" />

    <item
        android:id="@+id/action_users"
        android:icon="@drawable/ic_people_outline_30"
        android:showAsAction="always"
        android:title="@string/title_action_bar_users" />

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_logout_30"
        android:showAsAction="always"
        android:title="@string/text_logout" />
</menu>