<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".users.presentation.ui.addUsers.AddUsersFragment">

    <LinearLayout
        android:id="@+id/name_user_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/email_user_til"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstName_user_til"
            style="@style/CustomTextInputEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:hint="@string/hint_text_add_first_name_user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstName_user_tie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:nextFocusForward="@id/lastName_user_tie" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastName_user_til"
            style="@style/CustomTextInputEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_text_add_last_name_user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastName_user_tie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:nextFocusForward="@id/description_product_tie" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_user_til"
        style="@style/CustomTextInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/hint_text_add_email_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_user_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_user_tie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:nextFocusForward="@id/description_product_tie" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cellphone_user_til"
        style="@style/CustomTextInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/hint_text_add_cellphone_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_user_til">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cellphone_user_tie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:nextFocusForward="@id/description_product_tie" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/role_spinner"
        style="@style/SpinnerTheme"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:elevation="2dp"
        android:padding="5dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toStartOf="@+id/branch_spinner"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cellphone_user_til"
        app:layout_constraintVertical_bias="1" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/branch_spinner"
        style="@style/SpinnerTheme"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:elevation="2dp"
        android:padding="5dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/role_spinner"
        app:layout_constraintTop_toBottomOf="@+id/cellphone_user_til"
        app:layout_constraintVertical_bias="1" />

    <Button
        android:id="@+id/save_user_btn"
        style="@style/CustomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/text_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/role_spinner"
        app:layout_constraintVertical_bias="1" />

    <ProgressBar
        android:id="@+id/save_user_pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/role_spinner"
        app:layout_constraintVertical_bias="1" />
</androidx.constraintlayout.widget.ConstraintLayout>